--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="keywords" content="Квас, Крафт, Кваст">
+    <meta name="descritpion" content="Магазин крафтового кваса &laquo;Кваст&raquo;">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Philosopher:ital,wght@0,400;0,700;1,400&family=Roboto:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <title>Яхт клуб</title>
+    <title>Кваст: крафтовый квас</title>
   </head>
   <body class="page">
     <p>Test website</p>
