--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <title>Яхт клуб</title>
   </head>
   <body class="page">
-    <p>Test website</p>
+    <header class="page-header">
+      <nav class="main-nav">
+        <img src="img/logo.png" width="140" height="76" alt="Логотип Кваст">
+        <ul class="nav-menu">
+          <li>История</li>
+          <li>Производство</li>
+          <li>Ассортимент</li>
+          <li>Где купить</li>
+        </ul>
+        <h1>Крафтовый квас <br />всему голова!</h1>
+      </nav>
+    </header>
   </body>
 </html>
