Added section "New" on home page

--- a/index.html
+++ b/index.html
@@ -23,5 +23,48 @@
         <h1>Крафтовый квас <br />всему голова!</h1>
       </nav>
     </header>
+    <main>
+      <section class="new">
+        <h2>Новинки</h2>
+        <ul class="new-list">
+          <li class="new-list-item">
+            <h3>Вахтёр</h3>
+            <table>
+              <tr>
+                <td>АЛК.</td>
+                <td>&lt; 1%</td>
+              </tr>
+              <tr>
+                <td>ККАЛ</td>
+                <td>35</td>
+              </tr>
+            </table>
+            <img src="img/bottle-left.jpg" width="319" height="459" alt="Бутылка кваса Вахтёр">
+            <p>Терпкий и мощный, вкус этого кваса взбодрит после тяжёлого дня и придаст сил для вечерних приключений!</p>
+            <a class="button more" href="#">Подробнее</a>
+            <a class="button buy" href="#">Купить</a>
+            <p class="price">150 Р.</p>
+          </li>
+          <li class="new-list-item">
+            <h3>РОМАНТИК</h3>
+            <table>
+              <tr>
+                <td>АЛК.</td>
+                <td>&lt; 0,5%</td>
+              </tr>
+              <tr>
+                <td>ККАЛ</td>
+                <td>27</td>
+              </tr>
+            </table>
+            <img src="img/bottle-right.jpg" width="319" height="459" alt="Бутылка кваса Вахтёр">
+            <p>Лёгкий и освежающий напиток поможет сохранять отличное настроение в течение всего дня.</p>
+            <a class="button more" href="#">Подробнее</a>
+            <a class="button buy" href="#">Купить</a>
+            <p class="price">90 Р.</p>
+          </li>
+        </ul>
+      </section>
+    </main>
   </body>
 </html>
