Added "Features" section

--- a/index.html
+++ b/index.html
@@ -65,6 +65,22 @@
           </li>
         </ul>
       </section>
+      <section class="features">
+        <ul class="features-list">
+          <li class="features-item">
+            <h3>Варим сами</h3>
+            <p>Вот этими самыми руками. <br />Экспериментируем и <br />творим, что хотим.</p>
+          </li>
+          <li class="features-item">
+            <h3>Своё, родное</h3>
+            <p>Не заработка ради, а <br />импортозамещения для. <br />Поднимаем производство.</p>
+          </li>
+          <li class="features-item">
+            <h3>Не экономим</h3>
+            <p>Человек это то, что он ест и <br />пьёт. У нас только <br />качественные ингредиенты.</p>
+          </li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
