--- a/index.html
+++ b/index.html
@@ -69,17 +69,32 @@
         <ul class="features-list">
           <li class="features-item">
             <h3>Варим сами</h3>
-            <p>Вот этими самыми руками. <br />Экспериментируем и <br />творим, что хотим.</p>
+            <p>Вот этими самыми руками. Экспериментируем и творим, что хотим.</p>
           </li>
           <li class="features-item">
             <h3>Своё, родное</h3>
-            <p>Не заработка ради, а <br />импортозамещения для. <br />Поднимаем производство.</p>
+            <p>Не заработка ради, а импортозамещения для. Поднимаем производство.</p>
           </li>
           <li class="features-item">
             <h3>Не экономим</h3>
-            <p>Человек это то, что он ест и <br />пьёт. У нас только <br />качественные ингредиенты.</p>
+            <p>Человек это то, что он ест и пьёт. У нас только качественные ингредиенты.</p>
           </li>
         </ul>
+      </section>
+      <section class="history">
+        <h2>Немного истории</h2>
+        <article class="history-article">
+          <h3>Происхождение кваса</h3>
+          <i>Источник: <a class="source" href="#">ru.wikipedia.org</a></i>
+          <p>Квас на Руси появился в X-XI веке. Само слово «квас» тоже имеет древнерусское происхождение. Помимо России квас готовят в Белоруссии, Сербии, Македонии, Словакии и многих других странах, но называется он везде одинаково — квас.</p>
+          <img src="img/wiki-1.png" width="200" heigh="101" alt="Фотография кваса на столе">
+        </article>
+        <article class="history-article">
+          <h3>Классификация кваса</h3>
+          <i>Источник: <a class="source" href="#">ru.wikipedia.org</a></i>
+          <p>По российскому ГОСТу для промышленного изготовления — это напиток с объёмной долей этилового спирта не более 1,2%, изготовленный в результате незавершённого спиртового и молочнокислого брожения сусла.</p>
+          <img src="img/wiki-2.png" width="200" heigh="101" alt="Фотография кваса среди хлеба">
+        </article>
       </section>
     </main>
   </body>
