Добавил раздел  "Пресса о нас" на домашней

--- a/index.html
+++ b/index.html
@@ -96,6 +96,12 @@
           <img src="img/wiki-2.png" width="200" heigh="101" alt="Фотография кваса среди хлеба">
         </article>
       </section>
+      <section clas="press">
+        <h2>Пресса о нас</h2>
+        <blockquote>Сегодня мы провели дегустацию чего-то действительно новенького — крафтового кваса. Да, да, вы не ослышались! Спасибо Арсену и Руслану за то, что предоставили целую бочку своего напитка!</blockquote>
+        <cite>Газета столичный вестник</cite>
+        <a class="button ream-more" href="#">Читать далее</a>
+      </section>
     </main>
   </body>
 </html>
