Добавил таблицу с ассортиментом

--- a/index.html
+++ b/index.html
@@ -102,6 +102,46 @@
         <cite>Газета столичный вестник</cite>
         <a class="button ream-more" href="#">Читать далее</a>
       </section>
+      <section class="pricelist">
+        <h2>Ассортимент</h2>
+        <table class="pricelist-table">
+          <tr>
+            <th>Название</th>
+            <th>Алк.</th>
+            <th>Ккал</th>
+            <th>Объём</th>
+            <th>Стоимость</th>
+          </tr>
+          <tr>
+            <td class="column1">Классика</td>
+            <td>&lt; 1,2%</td>
+            <td>33</td>
+            <td>330 МЛ</td>
+            <td>120 Р.</td>
+          </tr>
+          <tr>
+            <td class="column1">Шабаш</td>
+            <td>&gt; 1,2%</td>
+            <td>45</td>
+            <td>330 МЛ</td>
+            <td>250 Р.</td>
+          </tr>
+          <tr>
+            <td class="column1">Вахтер <span class="new">Новинка</span></td>
+            <td>&lt; 1%</td>
+            <td>335</td>
+            <td>0,5 Л</td>
+            <td>150 Р</td>
+          </tr>
+          <tr>
+            <td class="column1">Романтик <span class="new">Новинка</span></td>
+            <td>&lt; 0,5%</td>
+            <td>27</td>
+            <td>0,5 Л</td>
+            <td>90 Р</td>
+          </tr>
+        </table>
+      </section>
     </main>
   </body>
 </html>
