--- a/index.html
+++ b/index.html
@@ -142,6 +142,37 @@
           </tr>
         </table>
       </section>
+      <section class="order-form">
+        <h2>Заказать</h2>
+        <p>Не ждите пока нас отрекламируют, как Вятский квас, и мы поднимем цены! Закажите настоящий крафтовый квас сейчас. При заказе от 10 баррелей — скидка 10%</p>
+        <form action="" method="get">
+          <label for="name">Представьтесь:</label>
+          <input type="text" id="name" name="name">
+          <div class="telephone">
+            <label for="tel">Номер телефона:</label>
+            <input type="text" id="tel" name="tel">
+            <label for="extra-tel">Доп. номер:</label>
+            <input type="text" id="extra-tel" name="extra-tel">
+          </div>
+          <label for="email">E-mail:</label>
+          <input type="text" id="email" name="email">
+          <label for="amount">Объём заказа:</label>
+          <select name="amount" id="amount">
+            <option value="5to10" selected>От 5 до 10 баррелей в неделю</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10</option>
+          </select>
+          <label for="comment">Доп. комментарий:</label>
+          <textarea id="comment" name="comment" rows="5" cols="100"></textarea>
+          <input type="checkbox" id="agreement" name="agreement" checked>
+          <label for="agreement">Я согласен получать квасную рассылку</label>
+        </form>
+        <a class="button order" href="#">Отправить заказ</a>
+      </section>
     </main>
   </body>
 </html>
