Добавил футер на домашнюю страницу

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
       <nav class="main-nav">
         <img src="img/logo.png" width="140" height="76" alt="Логотип Кваст">
         <ul class="nav-menu">
-          <li>История</li>
-          <li>Производство</li>
-          <li>Ассортимент</li>
-          <li>Где купить</li>
+          <li><a href="#">История</a></li>
+          <li><a href="#">Производство</a></li>
+          <li><a href="#">Ассортимент</a></li>
+          <li><a href="#">Где купить</a></li>
         </ul>
-        <h1>Крафтовый квас <br />всему голова!</h1>
       </nav>
+      <h1>Крафтовый квас <br />всему голова!</h1>
     </header>
     <main>
       <section class="new">
@@ -174,5 +174,26 @@
         <a class="button order" href="#">Отправить заказ</a>
       </section>
     </main>
+    <footer>
+      <div class="footer-nav">
+        <img src="img/logo.png" width="140" height="76" alt="Логотип Кваст">
+        <ul class="nav-menu">
+          <li><a href="#">История</a></li>
+          <li><a href="#">Производство</a></li>
+          <li><a href="#">Ассортимент</a></li>
+          <li><a href="#">Где купить</a></li>
+        </ul>
+      </div>
+      <ul class="socials">
+        <li><a href="#" title="Instagram">Инстаграм</a></li>
+        <li><a href="#" title="Facebook">Facebook</a></li>
+        <li><a href="#" title="Vkontakte">Vkontakte</a></li>
+      </ul>
+      <p>При перепечатке материалов ссылка на сайт обязательна!</p>
+      <div class="copyright">
+        <a href="#">HTML Academy</a>
+        <p><b>Разработчик:</b> HTML Academy</p>
+      </div>
+    </footer>
   </body>
 </html>
