css changes to header

--- a/index.html
+++ b/index.html
@@ -10,18 +10,22 @@
     <link href="css/styles.css" rel="stylesheet">
     <title>Кваст: крафтовый квас</title>
   </head>
-  <body class="page">
+  <body>
     <header class="page-header">
-      <nav class="main-nav">
-        <img src="img/logo.png" width="140" height="76" alt="Логотип Кваст">
-        <ul class="nav-menu">
-          <li><a href="#">История</a></li>
-          <li><a href="#">Производство</a></li>
-          <li><a href="#">Ассортимент</a></li>
-          <li><a href="#">Где купить</a></li>
-        </ul>
-      </nav>
-      <h1>Крафтовый квас <br />всему голова!</h1>
+      <div class="container">
+        <div class="header-top clearfix">
+        <img class="logo" src="img/logo.png" width="140" height="76" alt="Логотип Кваст">
+        <nav class="main-nav">
+          <ul class="nav-menu">
+            <li><a href="#">История</a></li>
+            <li><a href="#">Производство</a></li>
+            <li><a href="#">Ассортимент</a></li>
+            <li><a href="#">Где купить</a></li>
+          </ul>
+        </nav>
+      </div>
+        <h1>Крафтовый квас <br />всему голова!</h1>
+      </div>
     </header>
     <main>
       <section class="new">
