Доделал шапку по макету

--- a/index.html
+++ b/index.html
@@ -14,19 +14,24 @@
     <header class="page-header">
       <div class="container">
         <div class="header-top clearfix">
-        <img class="logo" src="img/logo.png" width="140" height="76" alt="Логотип Кваст">
-        <nav class="main-nav">
-          <ul class="nav-menu">
-            <li><a href="#">История</a></li>
-            <li><a href="#">Производство</a></li>
-            <li><a href="#">Ассортимент</a></li>
-            <li><a href="#">Где купить</a></li>
-          </ul>
-        </nav>
-      </div>
-        <h1>Крафтовый квас <br />всему голова!</h1>
+          <div class="header-logo">
+            <img class="logo" src="img/logo.png" width="140" height="76" alt="Логотип Кваст">
+          </div>
+          <nav class="main-nav">
+            <ul class="nav-menu">
+              <li><a href="#">История</a></li>
+              <li><a href="#">Производство</a></li>
+              <li><a href="#">Ассортимент</a></li>
+              <li><a href="#">Где купить</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="header-promo">
+          <h1>Крафтовый квас <br />всему голова!</h1>
+        </div>
       </div>
     </header>
+
     <main>
       <section class="new">
         <h2>Новинки</h2>
@@ -69,6 +74,7 @@
           </li>
         </ul>
       </section>
+
       <section class="features">
         <ul class="features-list">
           <li class="features-item">
@@ -85,6 +91,7 @@
           </li>
         </ul>
       </section>
+
       <section class="history">
         <h2>Немного истории</h2>
         <article class="history-article">
@@ -100,6 +107,7 @@
           <img src="img/wiki-2.png" width="200" heigh="101" alt="Фотография кваса среди хлеба">
         </article>
       </section>
+
       <section clas="press">
         <h2>Пресса о нас</h2>
         <blockquote>Сегодня мы провели дегустацию чего-то действительно новенького — крафтового кваса. Да, да, вы не ослышались! Спасибо Арсену и Руслану за то, что предоставили целую бочку своего напитка!</blockquote>
@@ -146,6 +154,7 @@
           </tr>
         </table>
       </section>
+
       <section class="order-form">
         <h2>Заказать</h2>
         <p>Не ждите пока нас отрекламируют, как Вятский квас, и мы поднимем цены! Закажите настоящий крафтовый квас сейчас. При заказе от 10 баррелей — скидка 10%</p>
@@ -178,6 +187,7 @@
         <a class="button order" href="#">Отправить заказ</a>
       </section>
     </main>
+
     <footer>
       <div class="footer-nav">
         <img src="img/logo.png" width="140" height="76" alt="Логотип Кваст">
