Оформил раздел "Features"

--- a/index.html
+++ b/index.html
@@ -76,20 +76,22 @@
       </section>
 
       <section class="features">
-        <ul class="features-list">
-          <li class="features-item">
-            <h3>Варим сами</h3>
-            <p>Вот этими самыми руками. Экспериментируем и творим, что хотим.</p>
-          </li>
-          <li class="features-item">
-            <h3>Своё, родное</h3>
-            <p>Не заработка ради, а импортозамещения для. Поднимаем производство.</p>
-          </li>
-          <li class="features-item">
-            <h3>Не экономим</h3>
-            <p>Человек это то, что он ест и пьёт. У нас только качественные ингредиенты.</p>
-          </li>
-        </ul>
+        <div class="container container-wide">
+          <ul class="features-list">
+            <li class="features-item cook">
+             <h3>Варим сами</h3>
+             <p>Вот этими самыми руками. Экспериментируем и творим, что хотим.</p>
+            </li>
+            <li class="features-item self-made">
+              <h3>Своё, родное</h3>
+              <p>Не заработка ради, а импортозамещения для. Поднимаем производство.</p>
+            </li>
+            <li class="features-item hq">
+              <h3>Не экономим</h3>
+              <p>Человек это то, что он ест и пьёт. У нас только лучшие ингредиенты.</p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="history">
