Оформил раздел "Новинки" в CSS

--- a/index.html
+++ b/index.html
@@ -34,45 +34,71 @@
 
     <main>
       <section class="new">
-        <h2>Новинки</h2>
-        <ul class="new-list">
-          <li class="new-list-item">
-            <h3>Вахтёр</h3>
-            <table>
-              <tr>
-                <td>АЛК.</td>
-                <td>&lt; 1%</td>
-              </tr>
-              <tr>
-                <td>ККАЛ</td>
-                <td>35</td>
-              </tr>
-            </table>
-            <img src="img/bottle-left.jpg" width="319" height="459" alt="Бутылка кваса Вахтёр">
-            <p>Терпкий и мощный, вкус этого кваса взбодрит после тяжёлого дня и придаст сил для вечерних приключений!</p>
-            <a class="button more" href="#">Подробнее</a>
-            <a class="button buy" href="#">Купить</a>
-            <p class="price">150 Р.</p>
-          </li>
-          <li class="new-list-item">
-            <h3>РОМАНТИК</h3>
-            <table>
-              <tr>
-                <td>АЛК.</td>
-                <td>&lt; 0,5%</td>
-              </tr>
-              <tr>
-                <td>ККАЛ</td>
-                <td>27</td>
-              </tr>
-            </table>
-            <img src="img/bottle-right.jpg" width="319" height="459" alt="Бутылка кваса Вахтёр">
-            <p>Лёгкий и освежающий напиток поможет сохранять отличное настроение в течение всего дня.</p>
-            <a class="button more" href="#">Подробнее</a>
-            <a class="button buy" href="#">Купить</a>
-            <p class="price">90 Р.</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2>Новинки</h2>
+          <ul class="new-list">
+            <li class="new-list-item">
+              <h3>Вахтёр</h3>
+              <div class="higher-section">
+                <div class="new-table">
+                  <table class="char-table">
+                    <tbody>
+                      <tr>
+                        <td>АЛК.</td>
+                        <td>&lt; 1%</td>
+                      </tr>
+                      <tr>
+                        <td>ККАЛ</td>
+                        <td>35</td>
+                      </tr>
+                  </tbody>
+                  </table>
+                  <p class="new-details">Ржаной хлеб, Вода, Солод, Соль</p>
+                </div>
+                <img src="img/bottle-left.jpg" width="319" height="459" alt="Бутылка кваса Вахтёр">   
+              </div>
+              <p class="new-description">Терпкий и мощный, вкус этого кваса взбодрит после тяжёлого дня и придаст сил для вечерних приключений!</p>
+              <div class="lower-section">
+                <div class="new-buttons">
+                  <a class="button more" href="#">Подробнее</a>
+                  <a class="button buy" href="#">Купить</a>
+                </div>
+                <div class="new-price">
+                  <p class="price">150 Р.</p>
+                </div>  
+              </div>
+            </li>
+            <li class="new-list-item">
+              <h3>РОМАНТИК</h3>
+              <div class="higher-section">
+                <div class="new-table">
+                  <table class="char-table">
+                    <tr>
+                      <td>АЛК.</td>
+                      <td>&lt; 0,5%</td>
+                    </tr>
+                    <tr>
+                      <td>ККАЛ</td>
+                      <td>27</td>
+                    </tr>
+                  </table>
+                  <p class="new-details">Ячменный хлеб, Вода, Солод, Апельсин</p>
+                </div>
+                <img src="img/bottle-right.jpg" width="319" height="459" alt="Бутылка кваса Вахтёр">
+              </div>
+              <p class="new-description">Лёгкий и освежающий напиток поможет сохранять отличное настроение в течение всего дня.</p>
+              <div class="lower-section">
+                <div class="new-buttons">
+                  <a class="button more" href="#">Подробнее</a>
+                  <a class="button buy" href="#">Купить</a>
+                </div>
+                <div class="new-price">
+                  <p class="price">90 Р.</p>
+                </div>  
+              </div>
+            </li>
+          </ul>                 
+        </div>
       </section>
 
       <section class="features">
