Оформил раздел НЕМНОГО ИСТОРИИ в css

--- a/index.html
+++ b/index.html
@@ -121,19 +121,29 @@
       </section>
 
       <section class="history">
-        <h2>Немного истории</h2>
-        <article class="history-article">
-          <h3>Происхождение кваса</h3>
-          <i>Источник: <a class="source" href="#">ru.wikipedia.org</a></i>
-          <p>Квас на Руси появился в X-XI веке. Само слово «квас» тоже имеет древнерусское происхождение. Помимо России квас готовят в Белоруссии, Сербии, Македонии, Словакии и многих других странах, но называется он везде одинаково — квас.</p>
-          <img src="img/wiki-1.png" width="200" heigh="101" alt="Фотография кваса на столе">
-        </article>
-        <article class="history-article">
-          <h3>Классификация кваса</h3>
-          <i>Источник: <a class="source" href="#">ru.wikipedia.org</a></i>
-          <p>По российскому ГОСТу для промышленного изготовления — это напиток с объёмной долей этилового спирта не более 1,2%, изготовленный в результате незавершённого спиртового и молочнокислого брожения сусла.</p>
-          <img src="img/wiki-2.png" width="200" heigh="101" alt="Фотография кваса среди хлеба">
-        </article>
+        <div class="container">
+          <h2>Немного истории</h2>
+          <article class="history-article clearfix">
+            <div class="article-head clearfix">
+              <h3>Происхождение кваса</h3>
+              <i>Источник: <a class="source" href="#">ru.wikipedia.org</a></i>
+            </div>
+            <div class="article-main clearfix">
+              <p>Квас на Руси появился в X-XI веке. Само слово «квас» тоже имеет древнерусское происхождение. Помимо России квас готовят в Белоруссии, Сербии, Македонии, Словакии и многих других странах, но называется он везде одинаково — квас.</p>
+              <img src="img/wiki-1.png" width="200" heigh="101" alt="Фотография кваса на столе">
+            </div>
+          </article>
+          <article class="history-article clearfix">
+            <div class="article-head clearfix">
+              <h3>Классификация кваса</h3>
+              <i>Источник: <a class="source" href="#">ru.wikipedia.org</a></i>
+            </div>
+            <div class="article-main clearfix">
+              <p>По российскому ГОСТу для промышленного изготовления — это напиток с объёмной долей этилового спирта не более 1,2%, изготовленный в результате незавершённого спиртового и молочнокислого брожения сусла.</p>
+              <img src="img/wiki-2.png" width="200" heigh="101" alt="Фотография кваса среди хлеба">
+            </div>
+          </article>
+      </div>
       </section>
 
       <section clas="press">
