небольшие переработки в html

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <article class="history-article clearfix">
             <div class="article-head clearfix">
               <h3>Происхождение кваса</h3>
-              <i>Источник: <a class="source" href="#">ru.wikipedia.org</a></i>
+              <i>Источник: <a class="source" href="#"><cite>ru.wikipedia.org</cite></a></i>
             </div>
             <div class="article-main clearfix">
               <p>Квас на Руси появился в X-XI веке. Само слово «квас» тоже имеет древнерусское происхождение. Помимо России квас готовят в Белоруссии, Сербии, Македонии, Словакии и многих других странах, но называется он везде одинаково — квас.</p>
@@ -136,7 +136,7 @@
           <article class="history-article clearfix">
             <div class="article-head clearfix">
               <h3>Классификация кваса</h3>
-              <i>Источник: <a class="source" href="#">ru.wikipedia.org</a></i>
+              <i>Источник: <a class="source" href="#"><cite></cite>ru.wikipedia.org</cite></a></i>
             </div>
             <div class="article-main clearfix">
               <p>По российскому ГОСТу для промышленного изготовления — это напиток с объёмной долей этилового спирта не более 1,2%, изготовленный в результате незавершённого спиртового и молочнокислого брожения сусла.</p>
