Оформил раздел "Новости" в css

--- a/index.html
+++ b/index.html
@@ -146,51 +146,58 @@
       </div>
       </section>
 
-      <section clas="press">
-        <h2>Пресса о нас</h2>
-        <blockquote>Сегодня мы провели дегустацию чего-то действительно новенького — крафтового кваса. Да, да, вы не ослышались! Спасибо Арсену и Руслану за то, что предоставили целую бочку своего напитка!</blockquote>
-        <cite>Газета столичный вестник</cite>
-        <a class="button ream-more" href="#">Читать далее</a>
+      <section class="press">
+        <div class="container">
+          <h2>Пресса о нас</h2>
+          <blockquote>Сегодня мы провели дегустацию чего-то действительно новенького — крафтового кваса. Да, да, вы не ослышались! Спасибо Арсену и Руслану за то, что предоставили целую бочку своего напитка!</blockquote>
+          <div class="press-cite clearfix">
+            <cite>Газета столичный вестник</cite>
+            <a class="button read-more" href="#">Читать далее</a>
+          </div>
+        </div>
       </section>
+
       <section class="pricelist">
-        <h2>Ассортимент</h2>
-        <table class="pricelist-table">
-          <tr>
-            <th>Название</th>
-            <th>Алк.</th>
-            <th>Ккал</th>
-            <th>Объём</th>
-            <th>Стоимость</th>
-          </tr>
-          <tr>
-            <td class="column1">Классика</td>
-            <td>&lt; 1,2%</td>
-            <td>33</td>
-            <td>330 МЛ</td>
-            <td>120 Р.</td>
-          </tr>
-          <tr>
-            <td class="column1">Шабаш</td>
-            <td>&gt; 1,2%</td>
-            <td>45</td>
-            <td>330 МЛ</td>
-            <td>250 Р.</td>
-          </tr>
-          <tr>
-            <td class="column1">Вахтер <span class="new">Новинка</span></td>
-            <td>&lt; 1%</td>
-            <td>335</td>
-            <td>0,5 Л</td>
-            <td>150 Р</td>
-          </tr>
-          <tr>
-            <td class="column1">Романтик <span class="new">Новинка</span></td>
-            <td>&lt; 0,5%</td>
-            <td>27</td>
-            <td>0,5 Л</td>
-            <td>90 Р</td>
-          </tr>
-        </table>
+        <div class="container">
+          <h2>Ассортимент</h2>
+          <table class="pricelist-table">
+            <tr>
+              <th class="first-column">Название</th>
+              <th>Алк.</th>
+              <th>Ккал</th>
+              <th>Объём</th>
+              <th class="last-column">Стоимость</th>
+            </tr>
+            <tr>
+              <td class="first-column">Классика</td>
+              <td>&lt; 1,2%</td>
+              <td>33</td>
+              <td>330 МЛ</td>
+              <td class="last-column">120 Р.</td>
+            </tr>
+            <tr>
+              <td class="first-column">Шабаш</td>
+              <td>&gt; 1,2%</td>
+              <td>45</td>
+              <td>330 МЛ</td>
+              <td class="last-column">250 Р.</td>
+            </tr>
+            <tr>
+              <td class="first-column">Вахтер <span class="new">Новинка</span></td>
+              <td>&lt; 1%</td>
+              <td>335</td>
+              <td>0,5 Л</td>
+              <td class="last-column">150 Р</td>
+            </tr>
+            <tr>
+              <td class="first-column">Романтик <span class="new">Новинка</span></td>
+              <td>&lt; 0,5%</td>
+              <td>27</td>
+              <td>0,5 Л</td>
+              <td class="last-column">90 Р</td>
+            </tr>
+          </table>
+        </div>
       </section>
 
       <section class="order-form">
