Продолжаю оформлять футер в css

--- a/index.html
+++ b/index.html
@@ -256,8 +256,7 @@
           </ul>
           <p class="copyrights">При перепечатке материалов ссылка на сайт обязательна!</p>
           <div class="developer">
-            <a href="#">HTML Academy</a>
-            <p><b>Разработчик:</b> HTML Academy</p>
+            <p><b>Разработчик:</b> <a href="#">HTML Academy</a></p>
           </div>
         </div>
       </div>
