Доделал оформление футера в css

--- a/index.html
+++ b/index.html
@@ -250,9 +250,9 @@
         </div>
         <div class="footer-bottom clearfix">
           <ul class="socials">
-            <li><a href="#" title="Instagram">Инстаграм</a></li>
-            <li><a href="#" title="Facebook">Facebook</a></li>
-            <li><a href="#" title="Vkontakte">Vkontakte</a></li>
+            <li><a class="Instagram" href="#" title="Instagram">Инстаграм</a></li>
+            <li><a class="Facebook" href="#" title="Facebook">Facebook</a></li>
+            <li><a class="Vkontakte" href="#" title="Vkontakte">Vkontakte</a></li>
           </ul>
           <p class="copyrights">При перепечатке материалов ссылка на сайт обязательна!</p>
           <div class="developer">
