--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
           </div>
           <nav class="main-nav">
             <ul class="nav-menu">
-              <li><a href="#">История</a></li>
-              <li><a href="#">Производство</a></li>
+              <li><a href="index.html">Флоаты</a></li>
+              <li><a href="index2.html">Флексы</a></li>
               <li><a href="#">Ассортимент</a></li>
               <li><a href="#">Где купить</a></li>
             </ul>
