--- a/index2.html
+++ b/index2.html
@@ -71,7 +71,7 @@
             </section>
     
             <section class="features2">
-              <div class="container">
+              <div class="container container-wide2">
                 <ul class="features-list2">
                   <li class="features-item2 cook2">
                   <h3>Варим сами</h3>
