Оформил раздел Press v2 в css

--- a/index2.html
+++ b/index2.html
@@ -106,10 +106,14 @@
             </section>
     
             <section class="press2">
+              <div class="container">
                 <h2>Пресса о нас</h2>
                 <blockquote>Сегодня мы провели дегустацию чего-то действительно новенького — крафтового кваса. Да, да, вы не ослышались! Спасибо Арсену и Руслану за то, что предоставили целую бочку своего напитка!</blockquote>
-                <cite>Газета столичный вестник</cite>
-                <a class="button2 read-more2" href="#">Читать далее</a>
+                <div class="press-footer2">
+                  <cite>Газета столичный стольник</cite>
+                  <a class="button2 read-more2" href="#">Читать далее</a>
+                </div>
+              </div>
             </section>
     
             <section class="pricelist2">
