Оформил footer v2 в CSS

--- a/index2.html
+++ b/index2.html
@@ -189,20 +189,26 @@
         </main>
     
         <footer class="main-footer2">
-            <img src="img/logo.png" width="140" height="76" alt="Логотип Кваст">
-            <ul class="nav-menu2">
-                <li><a href="#">История</a></li>
-                <li><a href="#">Производство</a></li>
-                <li><a href="#">Ассортимент</a></li>
-                <li><a href="#">Где купить</a></li>
-            </ul>
-            <ul class="socials2">
-                <li><a class="Instagram2" href="#" title="Instagram">Инстаграм</a></li>
-                <li><a class="Facebook2" href="#" title="Facebook">Facebook</a></li>
-                <li><a class="Vkontakte2" href="#" title="Vkontakte">Vkontakte</a></li>
-            </ul>
-            <p class="copyrights2">При перепечатке материалов ссылка на сайт обязательна!</p>
-            <p><b>Разработчик:</b> <a href="#">HTML Academy</a></p>
+          <div class="container container-wide2">
+            <div class="footer-top2">
+              <img src="img/logo.png" width="140" height="76" alt="Логотип Кваст">
+              <ul class="nav-menu2">
+                  <li><a href="#">История</a></li>
+                  <li><a href="#">Производство</a></li>
+                  <li><a href="#">Ассортимент</a></li>
+                  <li><a href="#">Где купить</a></li>
+              </ul>
+            </div>
+            <div class="footer-bottom2">
+              <ul class="socials2">
+                  <li><a class="Instagram2" href="#" title="Instagram">Инстаграм</a></li>
+                  <li><a class="Facebook2" href="#" title="Facebook">Facebook</a></li>
+                  <li><a class="Vkontakte2" href="#" title="Vkontakte">Vkontakte</a></li>
+              </ul>
+              <p class="copyrights2">При перепечатке материалов ссылка на сайт обязательна!</p>
+              <p class="webdeveloper2"><b>Разработчик:</b> <a href="#">HTML Academy</a></p>
+            </div>
+          </div>
         </footer>
       </body>
 </html>
